--- a/Hospital_System/pom.xml
+++ b/Hospital_System/pom.xml
@@ -17,15 +17,21 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
-			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-	<dependency>
-	    <groupId>mysql</groupId>
-	    <artifactId>mysql-connector-java</artifactId>
-	    <version>8.0.28</version>
-	</dependency>
 
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+			<!--<scope>provided</scope>-->
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
